fix jumping content when opening modal

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @import "./styles/balloon.min.css";
 
 @layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
+
   :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
